# wallnix

./: .gitignore  CMakeLists.txt  CustomButton.qml  CustomDialogMessage.qml  CustomSingleButton.qml  README.md  autostartmanager.cpp  autostartmanager.h  backend.cpp  backend.h  changeWallpaper.qml  homePage.qml  main.cpp  main.qml  settings.qml  settingsmanager.cpp  settingsmanager.h  wallpaperinstance.cpp  wallpaperinstance.h  wallpapermanager.cpp  wallpapermanager.h
deb-pack/wallnix_1.0.0/DEBIAN/: control
deb-pack/wallnix_1.0.0/usr/share/applications/: wallnix.desktop
